--- a/style/estilo.css
+++ b/style/estilo.css
@@ -42,6 +42,7 @@ h2{
 
 form{
     margin-top: 25px;   
+    margin-bottom: 80px;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -56,16 +57,67 @@ form{
 
 p.comeco{
     font-size: 25px;
+    
 }
 
 label{
     font-size: 20px;
+    
 }
 
 input[type=email],[type=password]{
     height: 45px;
     width: 100%;
     padding: 10px;
+    border: solid 1px #000;
+}
+
+input[type=submit]{
+    padding: 10px 50px 10px 50px;
+    background-color: #FFFDC6;
+    border-radius: 5px;
+    font-weight: bold;
+
+    -webkit-box-shadow: 1px 1px 5px 0 #9c9a9a;
+    -moz-box-shadow: 1px 1px 5px 0 #9c9a9a;
+    box-shadow: 1px 1px 5px 0 #9c9a9a;
+   
+    border: solid #FFFDC6 1px;
+}
+
+input[type=email]:focus, [type=password]:focus{
+    box-shadow: 0 0 0 0;
+    outline: 0;
+    border:outset  2px #000;
+}
+
+.final-login{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: medium;
+}
+
+p.final-login-cadastro{
+    font-family: cursive;
+    color: darkgoldenrod;
+    font-size: 25px;
+}
+
+a.cadastro{
+    padding: 10px 30px 10px 30px;
+    background-color: #FFFDC6;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #000;
+    font-weight: bold;
+    font-size: small;
+
+    -webkit-box-shadow: 1px 1px 5px 0 #9c9a9a;
+    -moz-box-shadow: 1px 1px 5px 0 #9c9a9a;
+    box-shadow: 1px 1px 5px 0 #9c9a9a;
+   
+    border: solid #FFFDC6 1px;
 }
 
 p{
