modifiquei o h1 na media query

--- a/style/estilo.css
+++ b/style/estilo.css
@@ -189,6 +189,10 @@ img.displayed {
         font-size: 17px;
     }
 
+    h1{
+        font-size: 50px;
+    }
+
     p.comeco{
         font-size: 20px;
     }
