--- a/style/estilo.css
+++ b/style/estilo.css
@@ -14,7 +14,7 @@
     color: black;
 }
 
-.pri{
+.txt-pri{
     width: 80%;
     padding: 30px;
     border: 10px;
@@ -23,7 +23,8 @@
 
 .container{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 h1{
@@ -36,7 +37,6 @@ h1{
 h2{
     font-family: cursive;
     text-align: center;
-    color: darkgoldenrod;
     font-size: 50px;
 }
 
@@ -118,6 +118,58 @@ a.cadastro{
     box-shadow: 1px 1px 5px 0 #9c9a9a;
    
     border: solid #FFFDC6 1px;
+}
+
+.box{
+    background-color: #a26faf;
+    text-decoration: none;
+    color: #000;
+    font-weight: bold;
+    border-radius: 5px;
+    margin: auto;
+
+    -webkit-box-shadow: 1px 1px 5px 0 #9c9a9a;
+    -moz-box-shadow: 1px 1px 5px 0 #9c9a9a;
+    box-shadow: 1px 1px 5px 0 #9c9a9a;
+
+}
+
+.box:hover{
+    color:#000000;
+}
+
+.cont{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: 100px;
+    grid-row-gap: 5px;
+    grid-column-gap: 5px;
+    grid-template-areas: 
+    'box-1'
+    'box-2'
+    'box-3'
+    'box-4';
+}
+
+.box-1{
+    grid-area: box-1;
+    padding:  20px 40px 20px 40px;
+}
+
+.box-2{
+    grid-area: box-2;
+    padding: 20px 31px 20px 31px;
+}
+
+
+.box-3{
+    grid-area: box-3;
+    padding: 20px 59px 20px 59px;
+}
+
+.box-4{
+    grid-area: box-4;
+    padding: 20px 67px 20px 67px;
 }
 
 p{
