--- a/style/estilo.css
+++ b/style/estilo.css
@@ -3,6 +3,7 @@
     padding: 0;
 }
 
+/*NAVBAR*/
 .logo{
     max-width: 250px;
 }
@@ -46,7 +47,7 @@ h2{
     text-align: center;
     font-size: 40px;
 }
-
+/*tela login*/
 form{
     margin-top: 25px;   
     margin-bottom: 80px;
@@ -127,7 +128,22 @@ a.cadastro{
     border: solid #FFFDC6 1px;
 }
 
+/*telas "minhaconta" das pastas aluno e professor*/
+
+@keyframes box-minhaconta{
+    from{
+        transform: translate3d(0px, 20px, 0px);
+        opacity: 0;
+    }
+    to{
+        transform: translate3d(0,0,0);
+        opacity: 1;
+    }    
+}
+
 .box{
+    animation-name: box-minhaconta;
+    animation-duration: 1s;
     background-color: #a26faf;
     text-decoration: none;
     color: #000;
@@ -149,13 +165,12 @@ a.cadastro{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-auto-rows: 100px;
-    grid-row-gap: 5px;
-    grid-column-gap: 5px;
     grid-template-areas: 
     'box-1'
     'box-2'
-    'box-3'
-    'box-4';
+    'box-4'
+    'box-5'
+    'box-3';
 }
 
 .box-1{
@@ -168,19 +183,47 @@ a.cadastro{
     padding: 20px 31px 20px 31px;
 }
 
-
-.box-3{
+.box-3{ 
     grid-area: box-3;
-    padding: 20px 59px 20px 59px;
+    padding: 20px 39px 20px 39px;
 }
 
 .box-4{
     grid-area: box-4;
-    padding: 20px 47px 20px 47px;
+    padding: 20px 59px 20px 59px;
 }
 
+.box-5{
+    grid-area: box-5;
+    padding: 20px 66px 20px 66px;
+}
 
-.fundo-meus-dados-aluno{
+/*telas "meus dados" das pastas aluno e professor*/
+
+
+@keyframes meusdados-a{
+    from{
+        transform: translate3d(-50px, 0px, 0px);
+        opacity: 0;
+    }
+    to{
+        transform: translate3d(0,0,0);
+        opacity: 1;
+    }    
+}
+
+@keyframes meusdados-b{
+    from{
+        transform: translate3d(50px, 0px, 0px);
+        opacity: 0;
+    }
+    to{
+        transform: translate3d(0,0,0);
+        opacity: 1;
+    }    
+}
+
+.fundo-meus-dados{
     margin-top: 25px;
     max-width: 60%;
     margin-left: auto;
@@ -189,7 +232,9 @@ a.cadastro{
     justify-content: space-around;
 }
 
-.meus-dados-aluno-a{
+.meus-dados-a{
+    animation-name: meusdados-a;
+    animation-duration: 1s;
 }
 
 .linha-vertical{
@@ -197,9 +242,12 @@ a.cadastro{
     border-left: #66edff solid;
 }
 
-.meus-dados-aluno-b{
+.meus-dados-b{
+    animation-name: meusdados-b;
+    animation-duration: 1s;
 }
 
+/*tela "turmas" da pasta aluno*/
 div.fundo-txt-turmas{
     background-color:#f1f0f0;
     width: 400px;
@@ -267,6 +315,29 @@ div.foto{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+/*tela "desempenho" e "chat com o professor" da pasta aluno*/
+.btn-chat{
+    background-color: #88ff7de5;
+    color: #000;
+    text-decoration: none;
+    font-size: x-small;
+    padding: 10px 10px 10px 10px;
+    height: 50px;
+    width: 100px;
+    border: none;
+}
+
+/*tela minhas aulas*/
+form.minha-aula{
+    border: #000 solid 5px;
+    border-radius: 10px;
+    width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px 5px 5px 5px;
+
 }
 
 p{
