--- a/style/estilo.css
+++ b/style/estilo.css
@@ -128,7 +128,7 @@ a.cadastro{
     border: solid #FFFDC6 1px;
 }
 
-/*telas "minhaconta" das pastas aluno e professor*/
+/*telas "minhaconta" da pasta aluno*/
 
 @keyframes box-minhaconta{
     from{
@@ -161,16 +161,16 @@ a.cadastro{
     color:#000000;
 }
 
-.cont{
+.cont-aluno{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-auto-rows: 100px;
     grid-template-areas: 
     'box-1'
     'box-2'
+    'box-3'
     'box-4'
-    'box-5'
-    'box-3';
+    'box-5';
 }
 
 .box-1{
@@ -190,12 +190,52 @@ a.cadastro{
 
 .box-4{
     grid-area: box-4;
-    padding: 20px 59px 20px 59px;
+    padding: 20px 60px 20px 60px;
 }
 
 .box-5{
     grid-area: box-5;
-    padding: 20px 66px 20px 66px;
+    padding: 20px 46px 20px 46px;
+}
+
+
+/*tela "minhaconta" da pasta aluno*/
+
+.cont-professor{
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: 100px;
+    grid-template-areas: 
+    'box-6'
+    'box-7'
+    'box-8'
+    'box-9'
+    'box-10';
+}
+
+.box-6{
+    grid-area: box-6;
+    padding: 20px 40px 20px 40px;
+}
+
+.box-7{
+    grid-area: box-7;
+    padding: 20px 32px 20px 32px;
+}
+
+.box-8{
+    grid-area: box-8;
+    padding: 20px 59px 20px 59px;
+}
+
+.box-9{
+    grid-area: box-9;
+    padding: 20px 48px 20px 48px;
+}
+
+.box-10{
+    grid-area: box-10;
+    padding: 20px 68px 20px 68px;
 }
 
 /*telas "meus dados" das pastas aluno e professor*/
@@ -329,11 +369,12 @@ div.foto{
     border: none;
 }
 
-/*tela minhas aulas*/
+/*tela minhas aulas da pasta professor*/
+
 form.minha-aula{
     border: #000 solid 5px;
     border-radius: 10px;
-    width: 700px;
+    width: 900px;
     margin-left: auto;
     margin-right: auto;
     padding: 5px 5px 5px 5px;
