--- a/style/estilo.css
+++ b/style/estilo.css
@@ -10,7 +10,7 @@
     left:0;
     right:0;
     bottom:0;
-    background-color:#F66B6B; /* cor do background que vai ocupar o body */
+    background-color:#3485ff; /* cor do background que vai ocupar o body */
     z-index:999; /* z-index para jogar para frente e sobrepor tudo */
 }
 #preloader .inner {
@@ -21,7 +21,7 @@
 }
 .bolas > div {
   display: inline-block;
-  background-color: #fff;
+  background-color: rgb(0, 0, 0);
   width: 25px;
   height: 25px;
   border-radius: 100%;
@@ -68,7 +68,7 @@
     left:0;
     right:0;
     bottom:0;
-    background-color:#F66B6B; /* cor do background que vai ocupar o body */
+    background-color:#3485ff; /* cor do background que vai ocupar o body */
     z-index:999; /* z-index para jogar para frente e sobrepor tudo */
 }
 #preloader .inner {
