--- a/public/style/estilo.css
+++ b/public/style/estilo.css
@@ -103,13 +103,14 @@
 
 h1{
     font-family: cursive;
-    color: #3299CC;
+    color: #000;
     text-align: center;
     font-size: 50px;
     text-transform: uppercase;
 }
 
 h2{
+    text-transform: uppercase;
     font-family: cursive;
     text-align: center;
     font-size: 40px;
@@ -247,7 +248,7 @@ a.btn-pequeno{
 .box{
     animation-name: box-minhaconta;
     animation-duration: 1s;
-    background-color: #a26faf;
+    background-color: #76A9D6;
     text-decoration: none;
     color: #000;
     font-weight: bold;
@@ -437,10 +438,11 @@ p.dados{
     flex: 2;
     padding: 10px 0px 0px 10px;
     margin-bottom: 0;
+
 }
 
 button.matricula{
-    background-color: #f8d300;
+    background-color: #3299CC;
     border-radius: 5px;
     margin-right: 30px;
     height: 25px;
@@ -504,7 +506,7 @@ input.minhas-aulas{
 }
 
 label.arquivo{
-    background-color: chartreuse;
+    background-color: #424fff;
     padding: 3px;
     border: solid #000 0px;
     border-radius: 5px;
@@ -524,8 +526,8 @@ select.aula{
 }
 
 input.enviar-minhas-aulas{
-    background-color: chartreuse;
-    border: solid chartreuse 1px;
+    background-color: #424fff;
+    border: solid #424fff 1px;
     
     padding: 10px;
 }
