--- a/public/style/estilo.css
+++ b/public/style/estilo.css
@@ -70,9 +70,10 @@
 }
 
 /*NAVBAR*/
-.logo{
-    max-width: 150px;
+nav{
+    background-color: #bce9ff;
 }
+
 
 .navbar-nav{
     width: 90%;
@@ -173,7 +174,7 @@ input[type=email],[type=password], [type=text], [type=date]{
 .btn-grande{
     
     margin-top: 20px;
-    background-color: #FFFDC6;
+    background-color: #76A9D6;
     border-radius: 5px;
     font-weight:500;
     color: #000;
@@ -184,7 +185,7 @@ input[type=email],[type=password], [type=text], [type=date]{
     box-shadow: 1px 1px 5px 0 #9c9a9a;
     
     height: 45px;
-    border: solid #FFFDC6 1px;
+    border: solid #76A9D6 1px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -218,7 +219,7 @@ p.final-login-cadastro{
 
 a.btn-pequeno{
     padding: 10px 30px 10px 30px;
-    background-color: #FFFDC6;
+    background-color: #76A9D6;
     border-radius: 5px;
     text-decoration: none;
     color: #000;
@@ -229,8 +230,8 @@ a.btn-pequeno{
     -moz-box-shadow: 1px 1px 5px 0 #9c9a9a;
     box-shadow: 1px 1px 5px 0 #9c9a9a;
    
-    border: solid #FFFDC6 1px;
-}
+    border: solid #76A9D6 1px;
+    }
 
 /*telas "minhaconta" da pasta aluno*/
 
@@ -401,12 +402,11 @@ div.fundo-txt-turmas{
 }
 
 input.txt-turmas{
-    width: 80%;
+    width: 90%;
     border-radius: 20px;
     border: none;
     box-shadow: 0 0 0 0;
     background-color: #f1f0f0;
-    border: #000 1px solid;
     padding-left: 10px;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -418,10 +418,9 @@ input.txt-turmas:focus{
 }
 
 button.btn-pesquisa-turmas{
-    width: 20%;
+    width: 10%;
     border: none;
     border-radius: 20px;
-    border: #000 1px solid;
 }
 
 div.turmas{
@@ -497,7 +496,7 @@ input.minhas-aulas{
 }
 
 .minhas-aulas-direita{
-    margin-top: 40px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -541,7 +540,7 @@ div.fundo-turmas-professor{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    background-color: #3299CC;
+    background-color: #bce9ff;
 }
 
 a.ver-turma{
@@ -552,7 +551,7 @@ a.ver-turma{
     padding: 10px 20px 10px 20px;
     border-radius: 5px;
     margin-top: 100px;
-    background-color:#f8d300;
+    background-color:#76A9D6;
 }
 
 h3.periodo{
@@ -624,6 +623,11 @@ input.btn-cad-cli{
 
 .cad-box-3{
     grid-area: cad-box-3;
+}
+
+input.in-check{
+    width:15px;
+    height: 15px;
 }
 
 input.in-cad-cli{
